# NEXUS

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  calci.py  coverage_report.md  mkdocs.yml  nexus  nexus.py  nexus.sh  pyproject.toml  requirements.txt  requirements_dev.txt  sample.nx  setup.py  syntax.md  test_parser.py  tokens.py
algolib/: binary_search.nx  fibo_memoized.nx
algolib/data_structures/: deque.nx  priority_queue.nx  queue.nx  stack.nx
algolib/graphs/: bfs.nx  dfs.nx
algolib/maths/: gcd_lcm.nx  isPrime_sieveErato.nx
algolib/matrix/: column_major_traversal.nx  diag_traversal.nx  example_usage.nx  make_matrix.nx  row_major_traversal.nx  spiral_traversal.nx
docs/: Basic Syntax.md  Bytecode.md  Compound Datatypes.md  Conditionals & Loops.md  Functions & Scoping.md  Future_Goals.md  Nexus REPL.md  Overview & Installation.md  README.md  all-in-one.md  bytecode_generation.md  control_flow.md  index.html  index.md  recursive_functions.md  scope_management.md  syntax.md
docs/old/: README.md  grammar.md  recursive_functions.md  user_defined_types.md
docs/olddocs/: README.md  all-in-one.md
docs/webdocs/: Basic Syntax.md  Bytecode.md  Compound Datatypes.md  Functions & Scoping.md  Overview & Installation.md
examples/: check_type.nx  explicit_typecast.nx  format_string.nx  func_code_1.nx  loop_code_1.nx  mixed_sample.nx  precdence_calc.nx  repeat_loop.nx  simple_ifelse.nx  typecasting_code_1.nx
src/: __init__.py  bytecode_eval.py  bytecode_eval_new.py  bytecode_gen.py  bytecode_gen_new.py  calci.py  context.py  eval.py  evaluator.py  file_parser.py  lexer.py  main.py  nexus_repl.py  parser.py  sample-code.txt  scope.py  scoping-examples.py  scratch_1.py  scratch_2.py  scratch_3.py  tokens.py  typechecker.py
src/depreciated/: byter.py  calci.py
src/examples/: sample-code.txt
src/lab_test/: q10_21110040.txt  q11_21110040.txt  q12_21110040.txt  q1_21110040.txt  q5_21110040.txt  q6_21110040.txt
src/our_compiler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: arithmetic_test.py  basic_test.py  conftest.py  data_structs_test.py  euler_test.py  func_scope_test.py  logical_bitwise_test.py  loop_condition_test.py  project_euler_codes.py  test_evaluator.py  test_examples.py  test_lexer.py  test_parser.py  typecheck_test.py
tests/depreciated/: basic_test.py  operation_test.py
