[tool.poetry]
name = "our_compiler"
version = "0.1.0"
description = "A custom compiler project"
authors = ["Your Name <moharanabalgopal@iitgn.ac.in>"]
readme = "README.md"
packages = [{include = "our_compiler"}]

[tool.poetry.dependencies]
python = "^3.11"  # Using latest stable Python version
click = "^8.1.7"  # For CLI interface
rich = "^13.7.0"  # For beautiful terminal output
antlr4-python3-runtime = "^4.13.1"  # For lexer/parser generation
typing-extensions = "^4.9.0"  # For advanced type hints
llvmlite = "^0.42.0"  # For LLVM bindings (if needed for code generation)

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"  # For code coverage reporting
black = "^24.1.1"  # For code formatting
isort = "^5.13.2"  # For import sorting
mypy = "^1.8.0"  # For static type checking
ruff = "^0.1.14"  # For fast linting
pre-commit = "^3.6.0"  # For git hooks

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]